-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 15
-
Component/s: hotspot
-
b14
Full image builds show module name and version as 'name@version':
[3,640s][trace][gc,classhisto ] GC(1) 4: 5067 162144 java.lang.String (java.base@15-internal)
Exploded builds don't have a version and prints 'name@'
[4,361s][trace][gc,classhisto ] GC(1) 3: 7144 228608 java.lang.String (java.base@)
This looks weird and I propose that we drop the trailing @ when there's no version string:
[4,361s][trace][gc,classhisto ] GC(1) 3: 7144 228608 java.lang.String (java.base)
[3,640s][trace][gc,classhisto ] GC(1) 4: 5067 162144 java.lang.String (java.base@15-internal)
Exploded builds don't have a version and prints 'name@'
[4,361s][trace][gc,classhisto ] GC(1) 3: 7144 228608 java.lang.String (java.base@)
This looks weird and I propose that we drop the trailing @ when there's no version string:
[4,361s][trace][gc,classhisto ] GC(1) 3: 7144 228608 java.lang.String (java.base)