8240532: heap inspection prints trailing @ after name of module without version

Reviewed-by: lfoltan